# options

./: .gitignore  CMakeLists.txt  README.md
include/options/core/: OptionNode.hpp  OptionValueNode.hpp  Options.hpp
src/: CMakeLists.txt
src/options/backends/: CMakeLists.txt
src/options/backends/json/: CMakeLists.txt
src/options/backends/yaml/: CMakeLists.txt
src/options/core/: CMakeLists.txt  OptionNode.cpp  Options.cpp
tests/: CMakeLists.txt  tests_core.cpp
